--- a/assets/contact.css
+++ b/assets/contact.css
@@ -13,7 +13,7 @@ body {
 }
 
 .cs-contact-section {
-  background: url("../assets/images/fondo2.png") center/cover no-repeat;
+  background: url("../assets/images/fondo_contact.JPG") center/cover no-repeat;
   width: 100%;          
   min-height: 100vh;
   padding-top: 100px;
