--- a/assets/contact.css
+++ b/assets/contact.css
@@ -49,7 +49,7 @@ body {
   width: 400px;
   height: 7px;
   background: #b8f0e6;
-  margin: 0 auto 50px auto;
+  margin: -30px auto 40px auto;
   border-radius: 4px;
   opacity: 0.95;
   box-shadow: 0 4px 15px rgba(0,0,0,0.25);
@@ -61,7 +61,7 @@ body {
   display: flex;
   max-width: 1200px;
   width: 100%;              /* ← asegura que nunca rompa */
-  margin: 0 auto;
+  margin: 0  auto auto;
   border-radius: 18px;
   overflow: hidden;
   box-shadow: 0 12px 35px rgba(0,0,0,0.2);
