Cambios en nuestros alrededores

--- a/assets/alrededores.css
+++ b/assets/alrededores.css
@@ -139,6 +139,10 @@
 .around-activity-golf {
   background-image: url("./images/golf.jpg");
 }
+.around-activity-cycling {
+  background-image: url("./images/ciclismo.jpg");
+}
+
 
 
 .around-activities-section {
